--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ disqus_shortname: orangejekylltheme # Disqus shortname
 
 # Contact form post url - Where the form gets posted - Check out formspree.io for free form posts http://formspree.io/
 # ==========
-formpost: http://formspree.io/orangetheme.50.talentedunicorn@spamgourmet.com
+formpost: http://formspree.io/orangetheme.50.milkovborislav@gmail.com
 
 env: production # - Set 'development' or 'production'
 exclude: [node_modules/, .sass-cache/]
